refatoring code
