# src/swagger.json
@@ -86,6 +86,70 @@
                     }
                 }
             }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": ["category"],
+                "summary":"Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content":{
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties":{
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": ["specification"],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification Already Exists!"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification":  { 
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type":"string"
+                },
+                "description": {
+                    "type": "string"
+                }
+            }
         }
     }
-}
+}                       
